# midi-scripter

./: 404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: publish-docs-to-ghpages.yml  publish-to-pypi.yml  ruff.yml
ableton/: index.html
api/ableton_msg/: index.html
api/ableton_port/: index.html
api/base_call/: index.html
api/base_gui_widget/: index.html
api/base_msg/: index.html
api/base_ports/: index.html
api/fs_event_msg/: index.html
api/fs_port/: index.html
api/gui_buttons/: index.html
api/gui_layout/: index.html
api/gui_list/: index.html
api/gui_msg/: index.html
api/gui_sliders/: index.html
api/gui_text/: index.html
api/key_msg/: index.html
api/key_port/: index.html
api/logging/: index.html
api/metronome_port/: index.html
api/midi_msg/: index.html
api/midi_note_data/: index.html
api/midi_port/: index.html
api/midi_ports_changed/: index.html
api/mouse_msg/: index.html
api/mouse_port/: index.html
api/osc_msg/: index.html
api/osc_port/: index.html
api/starters/: index.html
docs/: ableton.md  index.md  overview.md
docs/api/: ableton_msg.md  ableton_port.md  base_call.md  base_gui_widget.md  base_msg.md  base_ports.md  click_msg.md  fs_event_msg.md  fs_port.md  gui_buttons.md  gui_layout.md  gui_list.md  gui_msg.md  gui_sliders.md  gui_text.md  key_msg.md  key_port.md  logging.md  metronome_port.md  midi_msg.md  midi_note_data.md  midi_port.md  midi_ports_changed.md  mouse_msg.md  mouse_port.md  osc_msg.md  osc_port.md  restart_script.md  starters.md
examples/: script_template.py
examples/ableton_clips_launch_code/: ableton_clips_launch_code.py  readme.md
examples/ableton_global_preset/: ableton_global_preset.py  readme.md
examples/ableton_select_armed_track/: ableton_select_armed_track.py  readme.md
examples/ableton_select_armed_track_with_osc/: ableton_select_armed_track_with_osc.py  readme.md
examples/ableton_select_armed_track_with_remote_script/: ableton_select_armed_track_with_remote_script.py  readme.md
examples/ableton_sustain_holder/: ableton_sustain_holder.py  readme.md
examples/chord_info/: chord_info.py  readme.md
examples/controls_banks/: controls_banks.py  readme.md
examples/controls_layers/: controls_layers.py  readme.md
examples/launchpad_overlay/: launchpad_overlay.py  readme.md
examples/octave_transposer/: octave_transposer.py  readme.md
examples/start_daw_by_midi/: readme.md  start_daw_by_midi.py
extra/Ableton Remote Script/: readme.md
midiscripter/: __init__.py
midiscripter/ableton_remote/: UserConfiguration.txt  __init__.py  ableton_msg.py  ableton_port.py  remote_script_midi_mapping.py
midiscripter/base/: __init__.py  autostart.py  msg_base.py  port_base.py  shared.py
midiscripter/cli/: __init__.py  starters.py
midiscripter/file_event/: __init__.py  file_event_msg.py  file_event_port.py
midiscripter/gui/: __init__.py  app.py  color_theme.py  log_widget.py  main_window.py  menu_bar.py  message_sender.py  ports_widget.py  saved_state_controls.py
midiscripter/keyboard/: __init__.py  keyboard_msg.py  keyboard_port.py
midiscripter/logger/: __init__.py  console.py  console_sink.py  html.py  html_sink.py  log.py  log_obj.py
midiscripter/metronome/: __init__.py  click_msg.py  metronome_port.py
midiscripter/midi/: __init__.py  midi_msg.py  midi_note_data.py  midi_port.py  midi_ports_changed.py  midi_ports_update.py  teVirtualMIDI.py
midiscripter/mouse/: __init__.py  mouse_msg.py  mouse_port.py
midiscripter/osc/: __init__.py  osc_msg.py  osc_port.py  osc_query_maker.py
midiscripter/shared/: __init__.py  (+3 more)
overview/: index.html
search/: search_index.json
(+8 files in other folders)
